# yuuka

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  justfile
.github/workflows/: clippy.yml  docs.yml  fmt.yml  publish.yml  test.yml
docs/: lagrange.toml
docs/ar/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/en/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/es/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/fr/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/ja/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/ko/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/landing/: index.html
docs/ru/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/theme/: lang-switcher.css  lang-switcher.js
docs/zh-hans/: SUMMARY.md  attributes.md  auto-macro.md  book.toml  derive-enum.md  derive-struct.md
docs/zh-hant/: auto-macro.md  book.toml  derive-enum.md  derive-struct.md  examples.md  introduction.md
docs/zhs/: examples.md  introduction.md
docs/zht/: SUMMARY.md  attributes.md  examples.md
examples/: language_pack.rs  server_router.rs
src/: lib.rs
src/template/: auto_enums.rs  auto_structs.rs  enums.rs  structs.rs
src/tools/: auto_macros.rs  derive_enum.rs  derive_enum_items.rs  derive_macros_token.rs  derive_struct_items.rs  mod.rs
src/utils/: flatten.rs
tests/: anonymous_struct.rs  array_type_struct.rs  auto_macros.rs  default_struct.rs  enum_type_struct.rs  extra_derive_struct.rs  multi_level_struct.rs  option_type_struct.rs  reference_type_struct.rs  single_level_struct.rs  visibility_test.rs
tests/across_crate_entry/: Cargo.toml
tests/across_crate_entry/src/: main.rs
tests/across_crate_lib/: Cargo.toml
tests/across_crate_lib/src/: lib.rs
yuuka/: Cargo.toml
yuuka-macros/: Cargo.toml
yuuka-macros-types/: Cargo.toml
yuuka-macros/src/: lib.rs
yuuka-macros/src/template/: auto_enums.rs  auto_structs.rs  mod.rs
yuuka-macros/src/tools/: auto_macros.rs  derive_struct.rs  flatten.rs  mod.rs
yuuka-macros/src/utils/: auto.rs  derive_config.rs  derive_enum.rs  derive_enum_items.rs  derive_macros_token.rs  derive_struct.rs  derive_struct_items.rs  flatten.rs  mod.rs
yuuka/src/: lib.rs
yuuka/tests/: anonymous_struct.rs  array_type_struct.rs  auto_macros.rs  complex_type_struct.rs  default_struct.rs  enum_type_struct.rs  extra_derive_struct.rs  multi_level_struct.rs  reference_type_struct.rs  single_level_struct.rs  visibility_test.rs
