[package]
name = "yuuka"
version = "0.6.1"
edition = "2021"

publish = true
authors = ["langyo <langyo.china@gmail.com>"]
description = "A helper library to generate complex and nested structures by a simple macro"
license = "Apache-2.0"
repository = "https://github.com/celestia-island/yuuka"

[lib]
proc-macro = true

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum = { version = "^0.26", features = ["derive"] }

syn = { version = "^2", features = ["full"] }
proc-macro2 = { version = "^1", features = ["span-locations"] }
quote = "^1"
