[package]
name = "yuuka"
version = "0.6.2"
edition = "2021"
rust-version = "1.75"

publish = true
authors = ["langyo <langyo.china@gmail.com>"]
description = "Nested structure derivation macro for Rust"
license = "SySL-1.0"
repository = "https://github.com/celestia-island/yuuka"
keywords = ["proc-macro", "derive", "nested", "macro", "struct"]
categories = ["rust-patterns"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum = { version = "^0.26", features = ["derive"] }

syn = { version = "^2", features = ["full"] }
proc-macro2 = { version = "^1", features = ["span-locations"] }
quote = "^1"
