[package]
name = "yuuka-macros"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
_macros_types = { path = "../yuuka-macros-types", package = "yuuka-macros-types" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

syn = { version = "^2", features = ["full"] }
proc-macro2 = "^1"
quote = "^1"
