[package]
name = "yuuka-macros"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

syn = { version = "^2", features = ["full"] }
proc-macro2 = "^1"
quote = "^1"
