[package]
name = "yuuka-macros"
version.workspace = true
edition.workspace = true

publish = true
description = "A helper library to generate complex and nested structures by a simple macro"
license = "Apache-2.0"
repository = "https://github.com/celestia-island/yuuka"

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

syn = { version = "^2", features = ["full"] }
proc-macro2 = "^1"
quote = "^1"
