[package]
name = "yuuka"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
_macros = { path = "../yuuka-macros", package = "yuuka-macros" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
