[package]
name = "yuuka"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
_macros = { path = "../yuuka-macros", package = "yuuka-macros", version = "0.1.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
