[package]
name = "yuuka"
version.workspace = true
edition.workspace = true

publish = true
description = "A helper library to generate complex and nested structures by a simple macro"
license = "Apache-2.0"
repository = "https://github.com/celestia-island/yuuka"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
_macros = { path = "../yuuka-macros", package = "yuuka-macros", version = "0.4.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
